--- a/retinopathy_code.ipynb
+++ b/retinopathy_code.ipynb
@@ -49,7 +49,7 @@
       },
       "outputs": [],
       "source": [
-        "fpath = '/content/drive/MyDrive/Colab Notebooks/'\n",
+        "fpath = '/content/dataset/'\n",
         "fname = 'Retinopathy_FINAL.csv'\n",
         "fname1 = 'Retinopathy_FINAL_NIA.csv'"
       ]
